[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Sprites/WindowCorner2.png" type="Texture" id=1]
[ext_resource path="res://Resources/Sprites/WindowEdge4.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/WindowEdge1.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/WindowEdge2.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/WindowCorner1.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/WindowBackground.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/WindowCorner4.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/WindowEdge3.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/WindowCorner3.png" type="Texture" id=9]
[ext_resource path="res://Scripts/ResizeableWindow.gd" type="Script" id=10]

[node name="ResizeableWindow" type="Node2D"]
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 41.0
margin_bottom = 41.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
rect_min_size = Vector2( 41, 20 )
rect_clip_content = true
custom_constants/separation = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_clip_content = true
texture_normal = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 21.0
margin_bottom = 20.0
rect_min_size = Vector2( 1, 20 )
rect_clip_content = true
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_clip_content = true
texture_normal = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 41.0
margin_bottom = 21.0
rect_min_size = Vector2( 41, 1 )
rect_clip_content = true
custom_constants/separation = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 1.0
rect_min_size = Vector2( 20, 1 )
rect_clip_content = true
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="ColorRect" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_right = 21.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
rect_clip_content = true
texture_normal = ExtResource( 6 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 1.0
rect_min_size = Vector2( 20, 1 )
rect_clip_content = true
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 41, 20 )
custom_constants/separation = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 7 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 20.0
margin_right = 21.0
margin_bottom = 20.0
rect_min_size = Vector2( 1, 20 )
rect_clip_content = true
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 2

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 9 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 1.0
margin_bottom = 10.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 1.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
autowrap = true
clip_text = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton2" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton3" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TextureButton" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ColorRect" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TextureButton2" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TextureButton" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TextureButton2" to="." method="_close"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TextureButton3" to="." method="_close"]
